fix: enhance mobile header styling and improve overflow handling

--- a/style.css
+++ b/style.css
@@ -1124,12 +1124,27 @@ footer {
   font-weight: 400;
 }
 
+/* ----------------------------- */
 /* responsive for mobile */
+/* responsive styling */
+/* ----------------------------- */
 
 @media only screen and (max-width: 450px) {
-  header {
+  body {
     position: relative;
+    overflow-x: hidden;
   }
+
+  header {
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    background: rgba(255, 255, 255, 0.7);
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
+    margin-bottom: 1rem;
+  }
+
   .menu-visible {
     transform: translateX(0px) !important;
     -webkit-backdrop-filter: blur(40px) !important;
@@ -1146,8 +1161,7 @@ footer {
     background: rgba(255, 255, 255, 0.979);
     height: 400px !important;
     border-radius: 0 0 0 16px;
-    -webkit-backdrop-filter: blur(10px) !important;
-    backdrop-filter: blur(10px) !important;
+
     z-index: 99999999 !important;
     padding: 1rem 0;
   }
@@ -1160,6 +1174,7 @@ footer {
     padding: 1rem 0;
     height: auto;
     flex-direction: column;
+    margin-bottom: 0;
   }
 
   .navList {
